--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ body {
     <div class="background"></div>
     <div class="photo-box">
         
-        <img src="des() copy.jpg" alt="Design">
+        <img src="cat.gif" alt="Design">
     </div>
-    <a href="des().zip" download="Design Template||Yukie" class="button">Download</a>
+    <a href="mycv-v2.pdf" download="Design Template||Yukie" class="button">Download</a>
     </body>
 </html>
