--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@ body {
         
         <img src="cat.gif" alt="Design">
     </div>
-    <a href="mycv-v2.pdf" download="MyCv={$name}" class="button">Download</a>
+    <a href="mycv-v2.pdf" download="MyCv" class="button">Download</a>
     </body>
 </html>
